{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 427,
  "lineage": "52e059d1-7634-62d0-6c53-1cd6efa4a3ba",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.91.206.191",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-15T12:17:54.255-07:00",
            "description": "External address for WireGuard",
            "id": "projects/pa-nteekens-2/regions/europe-west4/addresses/wireguard-ip",
            "name": "wireguard-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "pa-nteekens-2",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/regions/europe-west4/addresses/wireguard-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/zones/europe-west4-a/instances/wireguard"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-15T12:18:15.806-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pa-nteekens-2/global/firewalls/tanzu-ssh",
            "log_config": [],
            "name": "tanzu-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
            "priority": 1000,
            "project": "pa-nteekens-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/firewalls/tanzu-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tanzu-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-05-15T12:18:15.973-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pa-nteekens-2/global/firewalls/tanzu-icmp",
            "log_config": [],
            "name": "tanzu-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
            "priority": 1000,
            "project": "pa-nteekens-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/firewalls/tanzu-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "51820"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-05-15T12:18:15.808-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pa-nteekens-2/global/firewalls/tanzu-wireguard",
            "log_config": [],
            "name": "tanzu-wireguard",
            "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
            "priority": 1000,
            "project": "pa-nteekens-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/firewalls/tanzu-wireguard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/zones/europe-west4-a/disks/test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pa-nteekens-2/zones/europe-west4-a/instances/test",
            "instance_id": "4338136251649440609",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "fg3OcWCzYWA=",
            "name": "test",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
                "network_ip": "10.10.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/regions/europe-west4/subnetworks/tanzu",
                "subnetwork_project": "pa-nteekens-2"
              }
            ],
            "project": "pa-nteekens-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/zones/europe-west4-a/instances/test",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wireguard-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/zones/europe-west4-a/disks/wireguard"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pa-nteekens-2/zones/europe-west4-a/instances/wireguard",
            "instance_id": "3634381550684945249",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "wi1kBcIcnZE=",
            "metadata_startup_script": "#!/bin/bash\nFLAG=\"/var/log/firstboot.log\"\nif [[ -f $FLAG ]]; then\n  logger \"=================Not first boot. Abort script===============\"\n  exit 0\nfi\n\nlogger \"=================First boot. Writing flag==================\"\ntouch \"$FLAG\"\n\n#Enable IP forwarding\nsed -i 's/#net.ipv4.ip_forward=1/net.ipv4.ip_forward=1/' /etc/sysctl.conf\nsysctl -p\n\n#Update and install wireguard\napt-get remove -y --purge man-db\napt-get update \u0026\u0026 apt [...]
            "name": "wireguard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.91.206.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/regions/europe-west4/subnetworks/tanzu",
                "subnetwork_project": "pa-nteekens-2"
              }
            ],
            "project": "pa-nteekens-2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/zones/europe-west4-a/instances/wireguard",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/pa-nteekens-2/global/networks/tanzu",
            "mtu": 0,
            "name": "tanzu",
            "project": "pa-nteekens-2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-15T12:18:16.607-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/pa-nteekens-2/regions/europe-west4/subnetworks/tanzu",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "tanzu",
            "network": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/global/networks/tanzu",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pa-nteekens-2",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pa-nteekens-2/regions/europe-west4/subnetworks/tanzu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}